2007-05-05  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-keyfile.(cc|h): Add typedefs for key, group and
	comment types.

2007-05-05  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: debian/rules: Split arch-dependendent and
	arch-independent packages into seprate rules.  Remove .map and
	.md5 files from the Doxygen docs.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Add new package, libsbuild-doc.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Generate doc/sbuild.dox.

	* doc/Makefile.am: Generate sbuild documentation.  Fix PS_DEPS for
	new manual page locations.

	* doc/schroot.dox.in: Remove sbuild input files, and use sbuild
	tag file.

	* doc/sbuild.dox.in: Split libsbuild API reference from
	schroot.dox.in.

2007-05-04  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Fix issues in debian/control.

2007-05-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Remove libsbuild1 dependency from
	libsbuild-dev.

2007-05-02  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 1.1.2.

	* NEWS: Bump version to 1.1.2.

	* configure.ac: Bump version to 1.1.2.

2007-05-02  Roger Leigh  <rleigh@debian.org>

	* Version 1.1.1.

	* debian/changelog: Update for 1.1.1.

	* NEWS: Document new environment variables set inside the chroot.

	* TODO: Remove completed SCHROOT_USER item.

2007-05-01  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Document packaging of only a static library.

2007-05-01  Roger Leigh  <rleigh@debian.org>

	* Update translations with new strings (require translation).

2007-05-01  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-environment.cc
	(add): Replace regex_match with regex_search, to avoid missing
	partial matches.

	* sbuild/sbuild-run-parts.cc
	(check_filename): Replace regex_match with regex_search, to avoid
	missing partial matches.

2007-04-26  Roger Leigh  <rleigh@debian.org>

	* test/Makefile.am (LOCAL_CXXFLAGS): Use $(top_srcdir) rather than