@@ -49,6 +49,7 @@ sbuild_public_h_sources =		\
 	sbuild-error.tcc		\
 	sbuild-format-detail.h		\
 	sbuild-i18n.h			\
+	sbuild-keyfile-base.h		\
 	sbuild-keyfile.h		\
 	sbuild-lock.h			\
 	sbuild-log.h			\
@@ -81,6 +82,7 @@ sbuild_public_cc_sources =		\
 	sbuild-dirstream.cc		\
 	sbuild-environment.cc		\
 	sbuild-format-detail.cc		\
+	sbuild-keyfile-base.cc		\
 	sbuild-keyfile.cc		\
 	sbuild-lock.cc			\
 	sbuild-log.cc			\
