@@ -28,92 +28,6 @@
 using boost::format;
 using namespace sbuild;
 
-namespace
-{
-
-  typedef std::pair<keyfile::error_code,const char *> emap;
-
-  /**
-   * This is a list of the supported error codes.  It's used to
-   * construct the real error codes map.
-   */
-  emap init_errors[] =
-    {
-      // TRANSLATORS: %1% = file
-      emap(keyfile::BAD_FILE,          N_("Can't open file '%1%'")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::DEPRECATED_KEY,    N_("line %1% [%2%]: Deprecated key '%4%' used")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::DEPRECATED_KEY_NL, N_("[%1%]: Deprecated key '%4%' used")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::DISALLOWED_KEY,    N_("line %1% [%2%]: Disallowed key '%4%' used")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::DISALLOWED_KEY_NL, N_("[%1%]: Disallowed key '%4%' used")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %4% = group name ("[groupname]" in configuration file)
-      emap(keyfile::DUPLICATE_GROUP,   N_("line %1%: Duplicate group '%4%'")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::DUPLICATE_KEY,     N_("line %1% [%2%]: Duplicate key '%4%'")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %4% = line contents as read from the configuration file
-      emap(keyfile::INVALID_GROUP,     N_("line %1%: Invalid group: \"%4%\"")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %4% = line contents as read from the configuration file
-      emap(keyfile::INVALID_LINE,      N_("line %1%: Invalid line: \"%4%\"")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::MISSING_KEY,       N_("line %1% [%2%]: Required key '%4%' is missing")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::MISSING_KEY_NL,    N_("[%1%]: Required key '%4%' is missing")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %4% = line contents as read from the configuration file
-      emap(keyfile::NO_GROUP,          N_("line %1%: No group specified: \"%4%\"")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %4% = line contents as read from the configuration file
-      emap(keyfile::NO_KEY,            N_("line %1%: No key specified: \"%4%\"")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::OBSOLETE_KEY,      N_("line %1% [%2%]: Obsolete key '%4%' used")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = key name ("keyname=value" in configuration file)
-      emap(keyfile::OBSOLETE_KEY_NL,   N_("[%1%]: Obsolete key '%4%' used")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = additional details
-      emap(keyfile::PASSTHROUGH_G,     N_("[%1%]: %4%")),
-      // TRANSLATORS: %1% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %2% = key name ("keyname=value" in configuration file)
-      // TRANSLATORS: %4% = additional details
-      emap(keyfile::PASSTHROUGH_GK,    N_("[%1%] %2%: %4%")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %4% = additional details
-      emap(keyfile::PASSTHROUGH_LG,    N_("line %1% [%2%]: %4%")),
-      // TRANSLATORS: %1% = line number in configuration file
-      // TRANSLATORS: %2% = group name ("[groupname]" in configuration file)
-      // TRANSLATORS: %3% = key name ("keyname=value" in configuration file)
-      // TRANSLATORS: %4% = additional details
-      emap(keyfile::PASSTHROUGH_LGK,   N_("line %1% [%2%] %3%: %4%"))
-    };
-
-}
-
-template<>
-error<keyfile::error_code>::map_type
-error<keyfile::error_code>::error_strings
-(init_errors,
- init_errors + (sizeof(init_errors) / sizeof(init_errors[0])));
-
 keyfile::keyfile ():
   groups(),
   separator(',')
