@@ -22,6 +22,7 @@
 
 #include <sbuild/sbuild-i18n.h>
 #include <sbuild/sbuild-log.h>
+#include <sbuild/sbuild-keyfile-base.h>
 #include <sbuild/sbuild-parse-error.h>
 #include <sbuild/sbuild-parse-value.h>
 #include <sbuild/sbuild-types.h>
@@ -44,7 +45,7 @@ namespace sbuild
    * documented in schroot.conf(5).  It is an independent
    * reimplementation of the Glib GKeyFile class, which it replaces.
    */
-  class keyfile
+  class keyfile : public keyfile_base
   {
   private:
     /// Group name.
@@ -76,43 +77,6 @@ namespace sbuild
     typedef std::map<group_name_type,group_type> group_map_type;
 
   public:
-    /// Configuration parameter priority.
-    enum priority
-      {
-	PRIORITY_OPTIONAL,   ///< The parameter is optional.
-	PRIORITY_REQUIRED,   ///< The parameter is required.
-	PRIORITY_DISALLOWED, ///< The parameter is not allowed in this context.
-	PRIORITY_DEPRECATED, ///< The parameter is deprecated, but functional.
-	PRIORITY_OBSOLETE    ///< The parameter is obsolete, and not functional.
-      };
-
-    /// Error codes.
-    enum error_code
-      {
-	BAD_FILE,          ///< The file to parse couldn't be opened.
-	DEPRECATED_KEY,    ///< The key is deprecated.
-	DEPRECATED_KEY_NL, ///< The key is deprecated (no line specified).
-	DISALLOWED_KEY,    ///< The key is not allowed.
-	DISALLOWED_KEY_NL, ///< The key is not allowed (no line specified).
-	DUPLICATE_GROUP,   ///< The group is a duplicate.
-	DUPLICATE_KEY,     ///< The key is a duplicate.
-	INVALID_GROUP,     ///< The group is invalid.
-	INVALID_LINE,      ///< The line is invalid.
-	MISSING_KEY,       ///< The key is missing.
-	MISSING_KEY_NL,    ///< The key is missing (no line specified).
-	NO_GROUP,          ///< No group was specified.
-	NO_KEY,            ///< No key was specified.
-	OBSOLETE_KEY,      ///< The key is obsolete.
-	OBSOLETE_KEY_NL,   ///< The key is obsolete (no line specified).
-	PASSTHROUGH_G,     ///< Pass through exception with group.
-	PASSTHROUGH_GK,    ///< Pass through exception with group and key.
-	PASSTHROUGH_LG,    ///< Pass through exception with line and group.
-	PASSTHROUGH_LGK    ///< Pass through exception with line, group and key.
-      };
-
-    /// Exception type.
-    typedef parse_error<error_code> error;
-
     /// The constructor.
     keyfile ();
 
